<?xml version="1.0" encoding="utf-8"?>
<!--

Copyright 2012, Karen P. Tang, Sen Hirano

This file is part of the Estrellita project

This program is free software: you can redistribute it and/or
modify it under the terms of the GNU Lesser General Public License 
as published by the Free Software Foundation, either version 3 of 
the License, or any later version.

This program is distributed in the hope that it will be useful, 
but WITHOUT ANY WARRANTY; without even the implied warranty of 
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
GNU General Public License for more details. 

You should have received a copy of the GNU Lesser General Public 
License along with this program. If not, see
		http://www.gnu.org/licenses/

-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical">

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical">
		<TextView android:id="@+id/widget_config_kidlabel"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
			android:text="@string/chooseChild" android:gravity="left"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<RadioGroup android:id="@+id/widget_config_kidchooser"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:orientation="vertical">

		</RadioGroup>
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:paddingTop="10dp">
		<Button android:id="@+id/widget_config_cancel"
			android:layout_weight="1" android:layout_width="wrap_content"
			android:text="@string/cancel" android:layout_height="wrap_content">
		</Button>
		<Button android:id="@+id/widget_config_ok"
			android:layout_weight="1" android:layout_width="wrap_content"
			android:text="@string/OK" android:layout_height="wrap_content">
		</Button>
	</LinearLayout>
</LinearLayout>
