<?xml version="1.0" encoding="utf-8"?>
<!--

Copyright 2012, Karen P. Tang, Sen Hirano

This file is part of the Estrellita project

This program is free software: you can redistribute it and/or
modify it under the terms of the GNU Lesser General Public License 
as published by the Free Software Foundation, either version 3 of 
the License, or any later version.

This program is distributed in the hope that it will be useful, 
but WITHOUT ANY WARRANTY; without even the implied warranty of 
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
GNU General Public License for more details. 

You should have received a copy of the GNU Lesser General Public 
License along with this program. If not, see
		http://www.gnu.org/licenses/

-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    >
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		>
	    <include 
	       	layout="@layout/activity_header"
	       	android:layout_width="fill_parent"
	       	android:layout_height="@dimen/activityHeaderHeight"
	       	/> 
	    <RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingTop="@dimen/spacer_small"
			>
		   	<TextView
		   		style="@style/apptFieldName"
		   		android:id="@+id/drname_field"
		   		android:layout_width="@dimen/formLeftFieldWidth"
				android:layout_height="fill_parent"
				android:layout_alignParentTop="true"
				android:layout_alignParentBottom="true"
				android:layout_alignParentLeft="true"
				android:gravity="left"
				android:text="@string/doctors_name" 
				android:textColor="@color/lightyellow"
				/>			
		   	<ImageView
		    	style="@style/tipIcon" 
		    	android:id="@+id/addressbook" 
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		        android:layout_alignParentTop="true"
				android:layout_alignParentBottom="true"
				android:layout_alignParentRight="true"
				android:layout_toRightOf="@id/drname_field"
		        android:src="@drawable/search_icon"
		        android:clickable="true"
		        />
		</RelativeLayout>
		<EditText 
			android:id="@+id/drname"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:scrollHorizontally="true" 
			android:clickable="true"
			android:imeOptions="actionDone"
			/>
		<LinearLayout 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingTop="@dimen/spacer_small"
			>
		   	<TextView
		   		style="@style/apptFieldName"
		   		android:layout_width="@dimen/formLeftFieldWidth"
				android:layout_height="fill_parent"
				android:text="@string/doctors_specialty" 
				android:textColor="@color/lightyellow"
				/>
		   	<TextView 
		   		style="@android:style/Widget.EditText"
		   		android:id="@+id/specialty"
		   		android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:clickable="true"
				/>
		</LinearLayout>
		<LinearLayout 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingTop="@dimen/spacer_small"
			>
		   	<TextView
		   		style="@style/apptFieldName"
		   		android:layout_width="@dimen/formLeftFieldWidth"
				android:layout_height="fill_parent"
				android:text="@string/appointment_date" 
				android:textColor="@color/lightyellow"
				/>
		   	<TextView 
		   		style="@android:style/Widget.EditText"
		   		android:id="@+id/date"
		   		android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:clickable="true"
				/>
		</LinearLayout>
		<LinearLayout 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingTop="@dimen/spacer_small"
			>
		   	<TextView
		   		style="@style/apptFieldName"
		   		android:layout_width="@dimen/formLeftFieldWidth"
				android:layout_height="fill_parent"
				android:text="@string/appointment_time" 
				android:textColor="@color/lightyellow"
				/>
		   	<TextView 
		   		style="@android:style/Widget.EditText"
		   		android:id="@+id/time"
		   		android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:clickable="true"
				/>
		</LinearLayout>
		<LinearLayout 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingTop="@dimen/spacer_small"
			>
		   	<TextView
		   		style="@style/apptFieldName"
		   		android:layout_width="@dimen/formLeftFieldWidth"
				android:layout_height="fill_parent"
				android:text="@string/doctors_phone" 
				/>
			<EditText 
		   		android:id="@+id/drphone"
		   		android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:clickable="true"
				android:phoneNumber="true"
				android:imeOptions="actionDone"
				/>
		</LinearLayout>
	   	<TextView
	   		style="@style/apptFieldName"
	   		android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/appointment_location" 
			/>
	   	<EditText 
       		android:id="@+id/location"
       		android:layout_width="fill_parent"
			android:layout_height="wrap_content"
       		android:minLines="2"
       		android:maxLines="3"
			android:scrollHorizontally="true" 
       		android:imeOptions="actionDone"
			/>
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingTop="@dimen/spacer_small"
			>
		   	<TextView
		   		style="@style/apptFieldName"
		   		android:id="@+id/notes_field"
		   		android:layout_width="@dimen/formLeftFieldWidth"
				android:layout_height="fill_parent"
				android:layout_alignParentTop="true"
				android:layout_alignParentBottom="true"
				android:layout_alignParentLeft="true"
				android:gravity="left"
				android:text="@string/appointment_notes" 
				/>			
		   	<ImageView
		    	style="@style/tipIcon" 
		    	android:id="@+id/notes_help" 
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		        android:layout_alignParentTop="true"
				android:layout_alignParentBottom="true"
				android:layout_alignParentRight="true"
				android:layout_toRightOf="@id/notes_field"
		        android:src="@drawable/notes_tip_icon"
		        android:clickable="true"
		        />
		</RelativeLayout>
	   	<EditText 
	   		style="@style/apptBigTextField"
	   		android:id="@+id/notes"
	   		android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:minLines="6"
			android:hint="@string/appointment_notes_hint"
			android:gravity="left|top"
			/>
		<LinearLayout 
			android:id="@+id/concerns_layout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:background="@drawable/btn_with_thin_border"
			android:clickable="true"
			>
		   	<TextView
		   		style="@style/apptConcernsPrompt"
		   		android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/appointment_concerns" 
				/>
			<LinearLayout 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="center"
				>
				<ImageView
			    	style="@style/concernsIcon" 
			    	android:id="@+id/diaper_concern" 
			        android:layout_width="wrap_content"
			        android:layout_height="fill_parent"
			        android:src="@drawable/diapers_icon"
			        android:scaleType="fitCenter"
			        />
			    <ImageView
			    	style="@style/concernsIcon"
			    	android:id="@+id/babymood_concern" 
			        android:layout_width="wrap_content"
			        android:layout_height="fill_parent"
			        android:src="@drawable/babymoods_icon"
			        />
			    <ImageView
			    	style="@style/concernsIcon"
			    	android:id="@+id/charts_concern" 
			        android:layout_width="wrap_content"
			        android:layout_height="fill_parent"
			        android:src="@drawable/customcharts_icon"
			        />	
			    <ImageView
			    	style="@style/concernsIcon"
			    	android:id="@+id/weight_concern" 
			        android:layout_width="wrap_content"
			        android:layout_height="fill_parent"
			        android:src="@drawable/weight_icon"
			        />	
	        </LinearLayout> 		        	         
		</LinearLayout> 
		<include 
	       	layout="@layout/button_footer"
	       	android:layout_width="fill_parent"
	       	android:layout_height="@dimen/buttonFooterHeight"
	       	/> 
	</LinearLayout>
</ScrollView>